src/objects/Data_Transformation_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Data_Transformation__c</fullName>
        <label>Data Transformation</label>
        <referenceTo>Data_Transformation__mdt</referenceTo>
        <relationshipLabel>Data Transformation Rules</relationshipLabel>
        <relationshipName>Data_Transformation_Rules</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsRegexConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Regex Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Data Transformation Rule</label>
    <pluralLabel>Data Transformation Rules</pluralLabel>
</CustomObject>